--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,9 +1,8 @@
 <div class="home-container">
+
   <div class="home-content">
     <div class="title-container">
-      <p class="mini-title">
-        Uvera
-      </p>
+      <p class="mini-title">Uvera</p>
 
       @if (title) {
       <p class="title">
@@ -16,7 +15,7 @@
       <div class="input-container">
         <i class="bi bi-search"></i>
         <input type="text" placeholder="Search movies or tv shows" (keydown.enter)="search($event)">
-    </div>
+      </div>
     </div>
 
     <div class="segmented-control-section">
